cmake_minimum_required(VERSION 3.9)
project(cpprest VERSION 0.1.0)
include(CTest)
enable_testing()
set (CMAKE_PREFIX_PATH /usr/lib/aarch64-linux-gnu/cmake/)
find_package(cpprestsdk REQUIRED)
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED system)
add_executable(cpprest main.cpp)
target_link_libraries(cpprest PRIVATE cpprestsdk::cpprest)
target_link_libraries(cpprest PRIVATE cpprestsdk::cpprest ${Boost_SYSTEM_LIBRARY})
target_link_libraries(cpprest PRIVATE ${OpenCV_LIBS})
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
